--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,11 @@
 \usepackage{ascmac}
 \usepackage{amsmath, amssymb}
 \usepackage{fancyhdr}
+\usepackage{tikz}
+\usepackage{multirow}
+\usepackage{adjustbox}
+\usepackage{graphicx} 
+\usepackage{enumitem}
 \renewcommand{\topfraction}{1.0}
 \renewcommand{\bottomfraction}{1.0}
 \renewcommand{\dbltopfraction}{1.0}
@@ -66,7 +71,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % ここの数字をいじってページ数をちょうど1ページに合わせましょう．
-\renewcommand{\baselinestretch}{0.73}
+\renewcommand{\baselinestretch}{1}
 %%%%%%%%%%%%%%% ここまで %%%%%%%%%%%%%%%%%
 
 \begin{document}
@@ -74,232 +79,145 @@
 
 \input{contents}
 
-\section{研究の背景と目的}
-\vspace*{-0.1cm}
-人間は他者とコミュニケーションすることによって，協調行動を学習することができる．
-また，自身の状態を記号（言語）で表現し相手に伝達することで，その記号を介して互いの状態を理解し，最適な行動を選択することができる．
-このように，記号を介してコミュニケーションを取ることで，互いに理解できる共有された記号が創発される過程を，創発コミュニケーションと呼ぶ．
-この創発コミュニケーションを確率的生成モデルで表現した手法として，谷口らによって提案されたメトロポリス・ヘイスティングス名付けゲーム(MHNG)がある\cite{mh1}．
-%MH名付けゲームは共有記号の創発の過程を確率的生成モデルで表現した手法であり，相手の観測情報を直接参照することなくエージェント同士が理解できる記号を創発できるモデルである．
-%我々はMHNGをマルチエージェント強化学習に応用することで，実環境のロボットを用いたタスクやマルチステップの意思決定を伴う協調タスクを実行する手法をこれまでに提案してきた\cite{ebara}\cite{nakamura}．
-筆者はMHNGをマルチエージェント強化学習に応用することで，実環境のロボットを用いた協調タスクを実行する手法を提案した\cite{ebara}．さらに，これを応用したマルチステップの意思決定を伴う協調タスクを実行する手法が提案された\cite{nakamura}．
-しかし，これらの手法は離散的な状態・行動しか扱うことができないため，複雑なタスクへの応用が困難という問題がある．
-そこで本稿では，MHNGと深層強化学習を組み合わせることで，より複雑な協調行動を学習できるモデルを提案する．
-実験では，2体のエージェントが，MHNGにより創発されたメッセージを介してコミュニケーションすることで，協調行動の学習が可能であることを示す．
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{はじめに}
+令和3年の自動車事故件数は305,196件，うち死亡事故は2,583件となっており，減少傾向にはあるものの依然多い．そのため自動車事故に対する，事故防止対策が求められている．
+安全運転を支援するシステムは数多く存在する．これらのシステムは運転支援システム（ADAS）と呼ばれていてる．しかしこれらのシステムは基本的に，危険状況に対して運転への制御や，警告による危険回避が目的となっている．そのため，運転者自身の運転技術を向上させることは目的とされていない．これに対し，本研究の最終的なシステムでは運転への制御や警告ではなく，運転操作をフィードバックすることで安全運転の持続的な意識付けを促し，運転技術の向上を目指す．
 
-\section{研究の方法}
-\label{method}
-図\ref{fig:model}が提案手法のモデル構造であり，各変数の説明は表\ref{tbl:params}の通りである．
-2つのSoft Actor Criticモデルをエージェントとし，それぞれがメッセージを介して協調行動を学習する．
+自動車による事故は，運転行動の３要素である，認知・判断・操作に，様々な要因で不測の事態が生じることで発生する．これに対し，運転者が安全運転への意識を高め，運転行動の3要素をより意識することで，これらの3要素の能力が向上することが示されている．%\cite{Influ}．
+また，安全運転への意識を高める方法として，運転診断システムというものが存在する．%\cite{drive_dia}\cite{drive_t}．
+しかし，このシステムでは，ドライブデータを集積・分析することで運転を評価し，月ごとのまとめレポートとして提示することで運転行動改善指示を行う．そのため指摘に即時性がなく，指摘された運転操作がわからず納得感が得られずらいといった問題がある．
+上記2つの課題を解決するために，本研究では運転操作をリアルタイムにフィードバックし，安全運転への意識付けと運転改善を促すシステムの実現を目指す．
 
-\subsection{MHNGによるメッセージの創発}
-\label{2.1}
-2体のエージェントが協調行動するためには，互いの状態を伝達するための記号が必要となる．
-ここで，$m^t$という潜在変数から互いの状態$s^t_{A}, s^t_{B}$と協調行動の報酬$r^t_{m}$ が生成されると仮定する．
-このモデルでは，$m^t$は互いの状態の決定に影響を与えるため，この潜在変数$m^t$はメッセージと考えることができる．
-メッセージを創発するために，各ステップのエージェントの状態$s^t_{A}, s^t_{B}$と協調行動の報酬$r^t_{m} $からメッセージ$m^t$を推論する．
-%
-\begin{eqnarray}
-m^t \sim p(\cdot | s^t_{A}, s^t_{B},  r^t_{m} ) \label{eq:message}
-\end{eqnarray} 
-%
-しかし，式(\ref{eq:message})は自身からは観測できない相手の状態が含まれており，直接計算することができない．
-そこで，文献\cite{mh1}と同様にMHNGを用いることで，互いに独立してメッセージを推論する．
-まずエージェントAが次式のように，$s^t_A$と$r^t_A$をもとに$m^{t*}$を生成し，Bに提案する．
-%
-\begin{equation}
-m^{t*} \sim p(\cdot | s^t_{A}, r^t_{m}) \label{eq:porpose_prob}
-\end{equation}
-%
-Bは提案された$m^{t*}$を自身の予測に基づき，次式の受理確率に従って受理または棄却する．
-%
-\begin{equation}
-r =  \frac{p(m^{t*}|s^t_{B}, r^t_{m})}{p(m^t|s^t_{B}, r^t_{m})} \label{acception}
-\end{equation}
-%
-$m^t$は現在のメッセージを表す．
-式(\ref{acception})より，Aから提案された$m^{t*}$の受理確率は，Bのパラメータのみから計算することができる．
-つまり，相手の状態を直接観測することなく，メッセージの受理/棄却を判断することができる．
+運転者に安全運転への意識を持たせるためには，運転に臨む「理想の自己像」と「現実の自己像」との間の不一致を自己認識させる必要があるとされている．%\cite{BM1}．
+また，客観的には危険な運転操作があるにもかかわらず，運転者がその危険度を過小評価することで事故のリスクが高まる可能性が示されている．%\cite{risk}．
+そこで，本研究では，自身の運転を自己認識させる手段として，運転中に運転操作をリアルタイムにフィードバックし，自身の危険運転操作を認識させる．
 
-以上の手順を役割を交代しながら繰り返し，最適なメッセージを推論する．
-このメッセージのやり取りをするコミュニケーションによって，2体のエージェントが，両者の状態に応じて最適な行動を選択することができる．
+自動車運転中のフィードバック方法に関しては，画像や音声，報知音，光，振動など様々なものが考えられる．
+%が，視覚フィードバックが注意力の維持に効果的であることや，視覚フィードバックと音声アナウンスの組み合わせが運転者の行動にポジティブな影響を与えることが示されている\cite{agent}\cite{sub_sys}．
+認知負荷の高いタスク中において，マルチモーダルなフィードバックの有用性も示されている．%\cite{Mul}．
+しかし，タッチスクリーン操作などにおいてマルチモーダルの効果が立証されているものの，自動車運転中のフィードバックについて言及されているものは少ない．そのため，視覚フィードバックである画像や，それらに音声アナウンスや報知音などを付け加えることで，マルチモーダルなフィードバックも含めて検討を行う．
 
-%
+フィードバックによる安全運転への意識付けを効果的に行い，行動変容を促すには，運転者の個人特性とフィードバック内容との関連性を明らかにし，個人に適したフィードバックをすることが重要であると考えている．個人特性とは，年齢，性別，運転年数，事故歴だけでなく，運転に取り組む姿勢や考え方，その人の行動変容の段階なども含まれ，それらの個人特性に応じて適切なフィードバックを提示することが重要である．
+%また，これまでの我々の研究で，ドライブシミュレーション実験により18人の高齢運転者を対象に個人特性とフィードバック手法の関連性を検証した結果，安全運転傾向の強い人ほど『画像＋音声』の提示に対して分かりやすいと感じ，情報の処理が容易にできていると感じている傾向にあることが分かってきた\cite{me}．しかし，実験の参加者の個人特性に偏りが見られたため，より大規模に幅広い対象に調査を行う必要性が議論されてきた．
+そこで本稿では，運転に関する様々な個人特性とフィードバック手法に対する主観評価の関連性を明らかにし，特性に応じたフィードバック手法を検討した．
+
+%\vspace*{-0.1cm}
+
+\section{先行研究}
+運転行動を分析している論文は数多く存在する\cite{tkt}\cite{ando}．
+これらの論文では，ドライバの走行履歴を蓄積し個人の運転の癖を学習することで，すべてのドライバに対し適切な運転支援を行うことを目的にしている．現状，注意低下や急ぎ運転など事故を誘発する異常運転を検出することが可能となっている．
+また，運転操作に対するフィードバックに着目し，様々なモダリティを用いて検証している論文も存在する\cite{agent}．
+この論文では，高齢ドライバの運転行動改善を促すエージェントの実現に向けて，ロボットエージェントによる運転操作のリアルタイムフィードバック及び，映像記録のフィードバックによる運転行動の変容を検証した．結果，それらの有用性が示され，自身の運転を客観的に認識すること及び，エージェントなどの人工物によるリアルタイムで具体的な説明が運転行動を変容させることが示唆された．しかし，この論文では万人に受け入れられる汎用的なフィードバックの検証はしているものの，ドライバに存在する個人の特性ごとに適したフィードバックの検証はできていない．ドライバといっても個人の特性は様々で，運転に対する姿勢や頻度，経験や年齢性別など個人によって状況は大きく異なる．そのため，それらの特性を導き出し，特性ごとに有用なフィードバック手法を検証することが必要であると考えている．そのため，本研究では運転特性テスト（DSQ）や運転負担感受性テスト（WSQ）\cite{check}，認知特性テスト\cite{cog}で個人の特性を集計し，運転操作のフィードバック内容との関連性を検証する．
+
+
+\section{WEBアンケート設計}
+\subsection{調査対象}
+本研究の個人特性とフィードバック内容に関する調査は，2024年3月にアンケート調査会社によるWEBアンケートを通じて実施した．回答者は日本在住の，普通自動車免許を所有する18歳以上99歳未満の男女を対象とした．
+回答者の割合は男女比が1：1になるように，18-29歳，30-39歳，40-49歳，50-59歳，60-69歳，70-99歳の6グループにわけ，各グループ250人，合計3,000人とした．
+
+本研究は電気通信大学倫理委員会(倫理管理番号第22015号)及び，トヨタ自動車株式会社研究倫理委員会(承認番号2023TMC70)の承認を得て実施している．
+
+\subsection{調査項目}
+WEBアンケートの項目は以下の通りである．
+
+\begin{enumerate}[label=(\arabic*), itemsep=0pt, parsep=0pt, leftmargin=*]
+    \item 基本的な個人属性（年齢，性別，居住地，職業など）
+    \item 運転状況（頻度，時間帯など）
+    \item 運転特性（DSQ）\cite{check}
+    \item 運転負担感受性（WSQ）\cite{check}
+    \item 安全運転への行動変容フェーズ
+    \item 認知特性\cite{cog}
+    \item フィードバック内容の正誤問題
+    \item 運転操作フィードバック内容に対する主観評価
+\end{enumerate}
+
+回答者は，(1)から(6)の回答後，急ブレーキを指摘するフィードバックを10秒間見て，(7)と(8)を回答する．
+フィードバックは【I.提示なし, I\hspace{-1.2pt}I.画像のみ, I\hspace{-1.2pt}I\hspace{-1.2pt}I.音声のみ, I\hspace{-1.2pt}V.画像＋報知音, V.画像+音声】の5種類を用いた．提示には音が出力されるものが含まれているため，事前に回答しているデバイスの音量調整用のページを設けることで，確実に音が出力されるように統制した．
+I\hspace{-1.2pt}I,  I\hspace{-1.2pt}V, Vの3種類のフィードバックに含まれる画像はFig.\ref{img}を用い， I\hspace{-1.2pt}I\hspace{-1.2pt}I, Vの音声は「事故リスクの高い急なブレーキがありました．早めのブレーキを心掛けましょう．」という内容を用いた．そして，それらのフィードバックが実際の運転中に提示されることを想定してもらい，(8)の主観評価を回答してもらった．
+(7),(8)は各提示について回答するため，合計5回答してもらった．
+
+
+運転特性（DSQ）は，4件法で18問の質問に回答することで，運転に取り組む態度や志向，考え方に応じて8つの特性を明らかにすることができる．運転負担感受性（WSQ）は，5件法で38問の質問に回答することで，10個の負担項目の内，どの項目をどの程度負担に感じるかを明らかにすることができる．
+
+安全運転への行動変容フェーズでは，行動変容のトランスセオレティカル・モデル（TTM）\cite{phase}\cite{p1}\cite{p2}を参考に，安全運転への意識段階ごとに5段階の設問を用いた．【フェーズ１：運転をしない，フェーズ2：運転はするが安全運転への関心はない，フェーズ3：取り組まなければいけないと思うが実行できていない，フェーズ4：既に取り組んでいてヒヤッとした場面がない（6ヶ月未満），フェーズ5：既に取り組みを継続していてヒヤッとした場面がない（6ヶ月以上）】
+
+フィードバック内容の正誤問題では，提示された各フィードバックが5種類のうちどれであったかを認識できているか確認する設問を用いた．
+運転操作フィードバック内容に対する主観評価は，5件法で好き嫌い，提示内容の納得感・改善しようと思うか，回数による煩わしく無さ，提示内容の納得感，情報の処理流暢性の6つの質問項目をそれぞれ複数の設問で問うた．
+
 \begin{figure}[t]
 \centering
-\includegraphics[scale=0.23]{fig/model.pdf}
-\caption{提案モデルの概要図}
-\label{fig:model}
+\includegraphics[scale=0.6]{fig/img.pdf}
+\caption{Feedback image}
+\label{img}
 \end{figure}
 
-%
-\begin{table}[t]
-  \caption{各変数の詳細}
-  \label{tbl:params}
-  \centering
-  \small
-  \begin{tabular}{|c|l|} \hline
+\subsection{データ収集と選別}
+\label{exception}
+アンケートのうち，以下の条件に該当する回答を，本発表における解析対象から除外した．
+\begin{itemize}
+    \item ダミー問題誤答
+    \item フィードバック内容の5択問題の誤答
+    \item 過去2年以内に運転経験がない人
+\end{itemize}
+上記の除外基準に基づき，804人(男性431人，女性373人)のアンケート結果を最終的な解析対象とした．
 
-    $s^t_{A}, s^t_{B}$	&各エージェントの状態 \\ \hline
-    $a^t_{A}, a^t_{B}$	&各エージェントの行動 \\ \hline
-    $r^t_{A}, r^t_{B}$	&各エージェントの報酬 \\ \hline
-    $r^t_{m}$	&協調行動の報酬 \\ \hline
-   $m^t$		&エージェント間でやり取りされるメッセージ \\ \hline
-  \end{tabular}
-\end{table}
-%
+\section{結果及び考察}
+\subsection{運転特性(DSQ)}
+\label{dsq_l}
+\subsubsection{因子分析}
+\label{fac}
+回答者に共通する運転特性の因子を明らかにするために，運転特性の回答結果を因子分析した．入力データは804人の運転特性に関する18個の質問への回答で，抽出法は最小残差法，回転法はプロマックス回転を採用した．また，因子数決定方法は平行分析に基づき，同じ大きさのランダムなデータで解析を行った平均的な結果より，固有値が大きい因子を採用した．なお，独自性が0.8以上の設問項目は除外した．
 
-\begin{figure*}[t]
-	\begin{center}
-	\includegraphics[scale=0.53]{fig/planning.pdf}
-	\vspace{-10 mm}
-	\caption{生成された行動の例}
-	\label{fig:planning}
-	\end{center}
-\end{figure*}
+因子分析の結果，特徴的な5因子を特定した．
+運転特性は，制限速度等などを守り安全確認を慎重に行う『安全運転特性』，気分や悩みなどによって運転がおろそかになる『不安定な運転特性』，自分が事故を起こすことをいつも気にしている『心配性特性』，車がステイタスであると考える『ステイタス特性』，先の信号を見て速度調整をする『事前準備的特性』の5因子が存在することが明らかとなった．
 
-\subsection{状態とメッセージに基づいた行動決定}
-\label{2.2}
-各エージェント$i \in \{A,B\}$は，自身の状態$s^t_{i}$と\ref{2.1}節で推論したメッセージ$m^t$に基づき，次式から行動$a^t_{i}$を選択する．
-%
+\vspace{\baselineskip}
+\subsubsection{クラスタ分析}
+\label{clu}
+クラスタ分析により運転特性が近しい人同士のクラスタを作成した．
+クラスタ分析をするために，運転特性は因子ごとに以下の式(1)を用いて運転特性スコアを算出した．
 \begin{equation}
-a^t_{i} \sim \pi_{i}(\cdot | s^t_{i}, m^t) \label{eq:action}
+\sum_{Q=1}^{17} (\text{各設問の4件法の値}) \times (\text{各設問の因子負荷量}) \label{eq}
 \end{equation}
-%
-$\pi_{i}$は各エージェントの方策を表す．
-各エージェントはメッセージによって間接的に相手の状態を知ることができるため，自身と相手の状態に応じた行動を選択することができる．
-%つまり，メッセージには両者の行動を変化させる役割があり，コミュニケーションによって協調を促すように両者の行動を調整できる．
-また，選択した行動$a^t_{i}$に対する価値$v^t_{i}$は，次式の行動価値関数$Q_{i}$から算出される．
-%
-\begin{equation}
-v^t_{i} = Q_{i}( s^t_{i}, a^t_{i}, m^t) \label{eq:value}
-\end{equation}
-%
-$\pi_i$と$Q_i$をニューラルネットワークで近似したSoft Actor Criticを用いて，これらの関数を学習する．
-ネットワークのパラメータ$\varphi_{i}$,$\theta_{i}$を用いて各エージェントの方策を$\pi_{\varphi_{i}}$，行動価値関数を$Q_{\theta_{i}}$と表すと，最小化する目的関数は次式となる．
-%
-\small
-\begin{eqnarray}
-J_{\pi}(\varphi_{i}) &=& E[ \alpha \log\pi_{\varphi_{i}}(a^t_{i} | s^t_{i}, m^t)-Q_{\theta_{i}}(s^t_{i},a^t_{i},m^t) ] \\ 
-J_{Q}(\theta_{i}) &=& E[\frac{1}{2}(Q_{\theta_{i}}(s^{t}_{i},a^{t}_{i},m^{t}) - \hat{Q}(s^{t}_{i},a^{t}_{i},m^{t})^2]  
-\end{eqnarray}
-\normalsize
-%
-ただし
-%
-\small
-\begin{equation}
-\hat{Q}(s^{t}_{i},a^{t}_{i},m^{t}) = r^t_{i} + \beta r^t_{m} + \gamma E[V(s^{t+1}_{i}, m^{t+1})] \label{beta}
-\end{equation}
-%
-\begin{equation}
-V(s^t_{i}) = E [Q_{\theta_{i}}(s^{t}_{i},a^{t}_{i},m^{t}) - \alpha log \pi_{\varphi_{i}}(a^t_{i} | s^t_{i}, m^t) ]
-\end{equation}
-\normalsize
-%
-である．また，$\alpha$はエントロピー正則化への重み，$\beta$は協調行動の報酬の重み，$\gamma$は割引率である．
-それぞれの目的関数が最小となるように，勾配降下法によって以下のようにパラメータを更新する．
-%
-\begin{equation}
-\varphi_{i} 	\leftarrow \varphi_{i} - \lambda_{\varphi_{i}} \nabla_{\varphi_{i}} J_{\pi}(\varphi_{i})
-\end{equation}
-%
-\begin{equation}
-\theta_{i} 	\leftarrow \theta_{i} - \lambda_{\theta_{i}} \nabla_{\theta_{i}} J_{Q}(\theta_{i})
-\end{equation}
-%
-ただし，$\lambda_{\varphi_{i}}, \lambda_{\theta_{i}}$は学習率である．
+Q1-17の和を運転特性スコアと定義し，因子ごとに算出することで，それぞれの因子の運転特性を定量化することができる．この際，独自性が0.8以上となった設問を1つ除外したため，17設問の和をスコアとした．
 
+804人分の5因子の運転特性スコア（804×5の配列）を入力し，ウォード法およびユークリッド距離を用いて階層的クラスタリングを行った．
+階層的クラスタリングを実施した結果，3クラスタから2クラスタに減少した際のデンドログラムの結合距離の増加が大きかったため，3クラスタが妥当であると判断した．
+そして，各クラスタごとに運転特性スコアの平均値を算出した．この結果をFig.\ref{score_d}に示す．
 
-
-
-
-\section{現在の結果}
-提案手法を用いて2体のエージェントが協調行動を学習できるかを検証した．
-図\ref{fig:world}のグリッドワールド空間で，互いが衝突を回避しながらゴールへ到達することを目標とする移動タスクを行った．
-%図\ref{fig:world}が実験に用いるグリッドワールドであり，番号が付いているグリッドが移動可能なグリッドである．
-%両エージェントのゴールをどちらも3番のグリッドとし，互いが衝突を回避しながらゴールへ到達することを目標とする．
-%状態$s$は，現在いるグリッドの番号の要素を$1$としたワンホットベクトルである．行動は$a \in \{0,1,2,3\}$で上下左右への移動を表している．報酬$r$は壁に衝突した場合は$-1$，
-%移動可能グリッドにいる場合は$0$，ゴールへ到達した場合は$1$とした．協調行動の報酬$r_m$は，2体が同じグリッドにいる（衝突した）場合は$-1$，異なるグリッドにいる場合は$0$とした．
-%メッセージ$m$は$64$次元のカテゴリカル変数であり，推論されたメッセージの要素を$1$としたワンホットベクトルである．
-
-\subsection{モデルの学習}
-\label{3.2}
-本実験では，オフラインで事前に取得した学習データを用いてモデルを学習させた後に，協調行動が可能か検証した．
-まず，各エージェントのスタート地点を数ヶ所設定してランダムに行動させ，一方がゴールに到達したらスタート地点に戻すことを繰り返し，
-計9840個の学習データ$[s^t_{i},a^t_{i},s^{t+1}_{i},r^{t}_{i},r^{t}_{m}]$を取得した．
-次に，取得したデータから，互いの状態と協調行動の関係を表現するメッセージ$m^t$をMHNGによって推論した．
-推論されたメッセージも加えたデータ$[s^t_{i},a^t_{i},s^{t+1}_{i},r^{t}_{i},r^{t}_{m},m^t]$を用いたミニバッチ学習により，方策$\pi_{i}$と行動価値関数$Q_{i}$を学習した．
-%学習時の各パラメータを表\ref{tbl:train_params}に示す．
-%また，MH名付けゲームによって生成されたメッセージの一部を図\ref{fig:msg}に示す．
-%図\ref{fig:msg}中の$p(s_{A}|m),p(s_{B}|m),p(r_{m}|m)$は，各メッセージが表現する確率分布である．
-%$m=0$のメッセージは，互いが異なる位置にいて協調できていることを表現している．
-%対して$m=1$のメッセージは，互いが同じ位置にいて衝突していることを表現している．
-%このことから，コミュニケーションによって互いの状態を適切に表現するメッセージを学習できたといえる．
-
-%実験環境
-\begin{figure}[t]
-\centering
-\includegraphics[scale=0.2]{fig/world.pdf}
-\caption{実験環境}
-\label{fig:world}
-\end{figure}
-
-
-\subsection{協調行動の生成}
-\label{3.3}
-学習されたパラメータを用いて，両エージェントが協調してゴールに到達できるかを検証した．
-まず各エージェントを移動可能グリッドにランダムに配置し，各状態に対するメッセージをMHNGによって推論した．
-次に，状態と推論したメッセージを各Actorに入力し，出力された行動を実行して次の状態を決定した．
-以降は同様に，各状態に対するメッセージの推論と行動生成をゴールに到達するまで繰り返した．
-この手順を1000回繰り返し，スタートからゴールするまでの衝突回数の合計を算出した．
-%また，比較として，メッセージなしの場合で\ref{3.2}節と同様の条件で学習したモデルを利用し，行動生成を行った．
-実験結果を表\ref{res}に示す．
-表\ref{res}より，メッセージなしの場合と比較して，衝突回数が約75\%減少していることが分かる．
-%これは，コミュニケーションによって互いの状態を伝達したことで，互いが衝突しない行動を学習できたためだと考えられる．
-また，スタートからゴールまでの生成された行動の例を図\ref{fig:planning}に示す．
-%図\ref{fig:planning}より，$t=2$では互いが衝突してしまっているものの，$t=3$でエージェントAが衝突を避ける方向へ移動し，その後再びゴールに向かっていることが分かる．
-図\ref{fig:planning}より，途中で一度衝突したものの，そこからエージェントAが衝突を避ける方向へ移動し，その後再びゴールに向かっていることが分かる．
-%これは，メッセージによってエージェントAの行動が変化したためだと考えられる．
-このことから，両エージェントが状況に応じて協調行動しつつ，ゴールに向かう方策を学習できていることが確認できる．
-
-\begin{table}[t]
-\caption{実験結果}
-\label{res}
-\centering
-\scalebox{0.92}{
-\begin{tabular}{c c c} \hline
-\rule[-1pt]{0pt}{10pt} & メッセージ$m$あり &  メッセージ$m$なし \\ \hline
-\rule[-1pt]{0pt}{10pt} 衝突回数(回) \rule[-1pt]{0pt}{10pt} & 66 & 252 \\ \hline
-\end{tabular}
-}
-\end{table} 
+クラスタ1は他のクラスタと比較して有意に不安定な運転特性スコアの値が大きく，心配性特性スコアの値も大きいため，【心配性で不安定な運転傾向の群】と考えられる．同様に，クラスタ2は安全運転特性スコアと心配性特性スコアの値が有意に大きく，不安定な運転特性スコアが有意に小さいため，【心配性傾向はあるが安全運転な群】と考えられる．最後に，クラスタ3は安全運転特性スコアと心配性特性スコアが有意に最も低いことから，【安全運転特性が最も低く，心配性でもない群】と考えられる．
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{まとめ及び今後の取り組み}
-本稿では，MHNGと深層強化学習を組み合わせることで，協調行動の学習が可能なモデルを提案した．
-実験では，エージェント同士がメッセージを介したコミュニケーションにより，互いの状態に応じて衝突を回避した行動を学習できることを確認した．
-今回は状態・行動が離散なタスクで評価したが，今後は状態・行動が連続なタスクへ適用することを考えている．
-また，潜在状態空間モデルへ拡張し，実世界のロボットタスクに適応することを目標としている．
-%
+\section{まとめ}
+あ
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace*{-0.55cm}
 \small
-\begin{thebibliography}{99}
-%MH naming game
-\bibitem{mh1}
-Tadahiro Taniguch et al., ``Emergent Communication through Metropolis-Hastings Naming Game with Deep Generative Models'', arXiv: 2205.12392, 2022.
-
-%NakamuraLab
-\bibitem{ebara}
-江原広人, 中村友昭, 谷口彰, 谷口忠大, ``分散的ベイズ推論としてのマルチエージェント強化学習と記号創発'', 言語処理学会第29回年次大会, 2023
-
-\bibitem{nakamura}
-Tomoaki Nakamura, Akira Taniguchi, Tadahiro Taniguchi, ``Control as Probabilistic Inference as an Emergent Communication Mechanism in Multi-Agent Reinforcement Learning'',arXiv:2307.05004, 2023
-
-
+\begin{thebibliography}{9}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\bibitem{Influ} Tina Cvahte Ojsterek, Darja Topolek, 2019,  "Influence of drivers’ visual and cognitive attention on their perception of changes in the traffic environment", European Transport Research Review, Article number: 45
+%\bibitem{drive_dia}株式会社デンソー，”ドライブレコーダーAI解析技術を活用した高齢者安全運転支援の実証実験”
+%\bibitem{drive_t}トヨタ自動車株式会社，”T-Connect My TOYOTA”
+%\bibitem{BM1} 深沢 伸幸，1987， ``認知的動機づけの手法を用いた運転行動の変容に関する研究''，産業・組織心理学研究，Vol.1, No.1, pp.29-38
+%\bibitem{risk} 大谷 亮, 宇野 宏, 藤田 和男，2007，``交通状況に起因するドライバの危険度過小評価が運転行動に及ぼす影響に関する検討''，日本人間工学会，Vol.43, No.6, p.303-314
+%\bibitem{me} 北川 浩行，粕谷 美里，阿部 香澄，2024，"危険運転指摘のための提示手法と運転特性の関連性検証"，電子情報通信学会総合大会
+%\bibitem{agent} 高田 翔太，平岡 敏洋，野崎 敬太，2013年，”自発的な行動変容を促す安全運転評価システム（第2報）”評価システムが運転行動に与える影響，自動車技術会論文集，Vol.44，No.2，p.673-678
+%\bibitem{sub_sys} 島崎 敢，2014，”自分の運転を客観視するための支援システム”，人間工学，Vol.50，No.Supplement，p. S36-S37
+%\bibitem{Mul} Ju-Hwan Lee, Charles Spence, 2008, ``Assessing the Benefit of Multimodal Feedback on Dual-Task Performance under Demanding Conditions'', People and Computers XXII Culture, Creativity, Interaction (HCI), Vol.1, pp.185-192
+\bibitem{tkt} 永井 正夫，”個人適合型運転診断・支援サービスを搭載した常時記録型ドライブレコーダの開発と行動実証実験（FOT）”
+\bibitem{ando} 安藤 章，閔 健熙，2018，”ドライブレコーダーの常時撮影映像等を活用した危険運転発生特性に関する分析”，交通工学論文集，Vol.4，No.1，p.A\_169-A\_176
+\bibitem{agent} 藤掛 和広，田中 貴紘，2019年，”ドライバエージェントの運転支援及び振り返り支援による運転行動改善の効果”，自動車技術開論文集，Vol.50，No.1，p.134-141
+\bibitem{check} 石橋 基範，大桑 政幸，赤松 幹之，2002，"運転者特性把握のための運転スタイル・運転負担感受性チェックシートの開発''，自動車技術会2002年春季大会学術講演会前刷集，No.55-02，9～12
+\bibitem{cog} 本田 真美，"2021，医師のつくった「頭のよさ」テスト～認知特性から見た6つのパターン～"，光文社新書
+\bibitem{phase} 岡 浩一朗，2003，"中年者における運動行動の変容段階と運動セルフ・エフィカシーの関係"，日本公衆衛生雑誌，Vol.50，No.3，p.208-215
+\bibitem{p1}Marcus BH, Simkin LR, "The transtheoretical model: Applications to exercise behavior", Med Sci Sports Exerc 1994; 26: 1400-1404
+\bibitem{p2}Prochaska JO, Marcus BH, "The transtheoretical model: Applications to exercise", In RK Dishman (Ed.) Advances in exercise adherence. Champaign, IL: Human Kinetics, 1994; 161-180
+\bibitem{old_driver} 三村 泰広，樋口 恵一，安藤 良輔，2019，"高齢運転者の運転能力と不安感の関係"，土木学会論文集，Vol.75，No.5，p.l\_1103-l\_1112
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{thebibliography}
 %
 \thispagestyle{fancy}
